--- a/02. Tabular data/2.1 Hose prices.ipynb
+++ b/02. Tabular data/2.1 Hose prices.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LEER DATOS"
+    "# Leear datos"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   },
   "name": "seminar13_optional_practice_trees_titanic.ipynb"
  },
