--- a/2. Tabular data (clas)/2.5 Neural Network.ipynb
+++ b/2. Tabular data (clas)/2.5 Neural Network.ipynb
@@ -55,6 +55,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
+    "#!wget -P ./../data/ https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/data/adult.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
