Partial Dependency Plot

--- a/2. Tabular data (clas)/2.2 Decission tree.ipynb
+++ b/2. Tabular data (clas)/2.2 Decission tree.ipynb
@@ -23,7 +23,8 @@
     "from sklearn.preprocessing   import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree            import DecisionTreeClassifier, plot_tree\n",
-    "from sklearn.metrics         import accuracy_score, balanced_accuracy_score, plot_confusion_matrix"
+    "from sklearn.metrics         import accuracy_score, balanced_accuracy_score, plot_confusion_matrix\n",
+    "from sklearn.inspection      import permutation_importance, plot_partial_dependence"
    ]
   },
   {
@@ -682,7 +683,7 @@
    "source": [
     "fi = pd.DataFrame({\n",
     "      'feature':     x.columns,\n",
-    "      'importance':  forest.feature_importances_\n",
+    "      'importance':  model.feature_importances_\n",
     "     }).sort_values('importance', ascending=False).reset_index(drop=True)\n",
     "\n",
     "sns.barplot(x=fi.importance, y=fi.feature, color='royalblue');"
