--- a/2. Tabular data (clas)/2.3 Random Forest.ipynb
+++ b/2. Tabular data (clas)/2.3 Random Forest.ipynb
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Qué queremos predecir? -> `df.Salary`"
+    "# Qué queremos predecir? -> `df.salary`"
    ]
   },
   {
@@ -780,6 +780,13 @@
    "source": [
     "# <center>FIN"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
