seaborn show fix

--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -17,9 +17,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "sns.set()\n",
     "import matplotlib.pyplot as plt\n",
-    "from pandas_profiling import ProfileReport"
+    "\n",
+    "%matplotlib inline\n",
+    "sns.set()"
    ]
   },
   {
