--- a/1. Software/1.4 Sklearn.md
+++ b/1. Software/1.4 Sklearn.md
@@ -2,7 +2,23 @@
 
 
 1. [Supervised learning](https://scikit-learn.org/stable/supervised_learning.html)
+   - 1.10 [Decision Trees](https://scikit-learn.org/stable/modules/tree.html)
+   - 1.11 [Ensemble methods](https://scikit-learn.org/stable/modules/ensemble.html)
+     - 1.11.2 [Random Forest](https://scikit-learn.org/stable/modules/ensemble.html#forests-of-randomized-trees)
+     - 1.11.4 [Gradient Boosting](https://scikit-learn.org/stable/modules/ensemble.html#gradient-tree-boosting)
+     - 1.11.8 [Stacking](https://scikit-learn.org/stable/modules/ensemble.html#stacked-generalization)
+2. [Unsupervised learning](https://scikit-learn.org/stable/unsupervised_learning.html)
+3. [Model selection and evaluation](https://scikit-learn.org/stable/model_selection.html)
+   - 3.1 [Validation](https://scikit-learn.org/stable/modules/cross_validation.html)
+   - 3.3 [Metrics](https://scikit-learn.org/stable/modules/model_evaluation.html)
+     - 3.3.2.5 [Confusion matrix](https://scikit-learn.org/stable/modules/model_evaluation.html#confusion-matrix)
+4. [Inspection](https://scikit-learn.org/stable/inspection.html)
+5. [Visualizations](https://scikit-learn.org/stable/visualizations.html)
+6. [Dataset transformations](https://scikit-learn.org/stable/data_transforms.html)
+7. [Dataset loading utilities](https://scikit-learn.org/stable/datasets/index.html)
+8. [Computing with scikit-learn](https://scikit-learn.org/stable/modules/computing.html)
 
+---
 
 # [3.1. Cross-validation](https://scikit-learn.org/stable/modules/cross_validation.html)
 
