--- a/3. Tabular data (regr)/3.3 Linear regression.ipynb
+++ b/3. Tabular data (regr)/3.3 Linear regression.ipynb
@@ -10,17 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "sns.set()\n",
     "import matplotlib.pyplot as plt\n",
     "from pandas_profiling import ProfileReport\n",
     "\n",
+    "sns.set()\n",
+    "%matplotlib inline\n",
     "pd.set_option('display.max_columns', 1000) # Display all variables"
    ]
   },
@@ -33,22 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
-    "#!wget -P ./../data/ https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/data/titanic_train.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"../data/house-prices-train.csv\", index_col='Id')\n",
-    "df_test  = pd.read_csv(\"../data/house-prices-test.csv\", index_col='Id')"
+    "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
+    "#!wget -P ./../data/ https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/data/kaggle_house_prices_train.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv(\"../data/kaggle_house_prices_train.csv\", index_col='Id')\n",
+    "df_test  = pd.read_csv(\"../data/kaggle_house_prices_test.csv\", index_col='Id')"
    ]
   },
   {
@@ -777,52 +778,6 @@
    ],
    "source": [
     "df_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79cb2b60ee8547cc8802fa66c9afa87c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(HTML(value='<div id=\"overview-content\" class=\"row variable spacing\">\\n    <div class=\"row\">\\n   …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Report generated with <a href=\"https://github.com/pandas-profiling/pandas-profiling\">pandas-profiling</a>."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ProfileReport(df_train)"
    ]
   },
   {
