--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
-    "#!wget -P ./../data/ https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/2.%20Tabular%20data%20(clas)/data/titanic_train.csv"
+    "#!wget -P ./data/ https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/2.%20Tabular%20data%20(clas)/data/titanic_train.csv"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/kaggle_titanic_train.csv\", index_col=\"PassengerId\")"
+    "df = pd.read_csv(\"data/kaggle_titanic_train.csv\", index_col=\"PassengerId\")"
    ]
   },
   {
