--- a/2. Tabular data (clas)/2.5 Logistic Regression.ipynb
+++ b/2. Tabular data (clas)/2.5 Logistic Regression.ipynb
@@ -54,20 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 228
-    },
-    "colab_type": "code",
-    "id": "5_a_wDxGJV8E",
-    "outputId": "4a0b4d26-87ec-417c-f627-7744e11faf68"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
-    "#!wget -P ./../data/ https://raw.githubusercontent.com/CenticMurcia/curso-ciencia-datos/master/data/titanic_train.csv"
+    "#!wget -P ./data/ https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/2.%20Tabular%20data%20(clas)/data/titanic_train.csv"
    ]
   },
   {
