--- a/3. Tabular data (regr)/3.4 Regularizated Linear Regression.ipynb
+++ b/3. Tabular data (regr)/3.4 Regularizated Linear Regression.ipynb
@@ -77,23 +77,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-02-13 14:47:22--  https://raw.githubusercontent.com/CenticMurcia/curso-ciencia-datos/master/data/loans.csv\n",
+      "--2020-02-14 14:54:17--  https://raw.githubusercontent.com/CenticMurcia/curso-ciencia-datos/master/data/loans.csv\n",
       "Resolviendo raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.192.133, 151.101.128.133, 151.101.64.133, ...\n",
       "Conectando con raw.githubusercontent.com (raw.githubusercontent.com)[151.101.192.133]:443... conectado.\n",
       "Petición HTTP enviada, esperando respuesta... 200 OK\n",
       "Longitud: 4947180 (4,7M) [text/plain]\n",
-      "Guardando como: “../data/loans.csv.1”\n",
+      "Guardando como: “./data/loans.csv”\n",
       "\n",
-      "loans.csv.1         100%[===================>]   4,72M  2,07MB/s    en 2,3s    \n",
+      "loans.csv           100%[===================>]   4,72M  2,77MB/s    en 1,7s    \n",
       "\n",
-      "2020-02-13 14:47:26 (2,07 MB/s) - “../data/loans.csv.1” guardado [4947180/4947180]\n",
+      "2020-02-14 14:54:20 (2,77 MB/s) - “./data/loans.csv” guardado [4947180/4947180]\n",
       "\n"
      ]
     }
    ],
    "source": [
     "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
-    "!wget -P ../data/ https://raw.githubusercontent.com/CenticMurcia/curso-ciencia-datos/master/data/loans.csv"
+    "!wget -P ./data/ https://raw.githubusercontent.com/CenticMurcia/curso-ciencia-datos/master/data/loans.csv"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/loans.csv')"
+    "df = pd.read_csv('./data/loans.csv')"
    ]
   },
   {
@@ -269,8 +269,8 @@
       "Dep. Variable:            loan_amount   R-squared:                       0.815\n",
       "Model:                            OLS   Adj. R-squared:                  0.815\n",
       "Method:                 Least Squares   F-statistic:                     3031.\n",
-      "Date:                Thu, 13 Feb 2020   Prob (F-statistic):               0.00\n",
-      "Time:                        14:47:26   Log-Likelihood:                -40379.\n",
+      "Date:                Fri, 14 Feb 2020   Prob (F-statistic):               0.00\n",
+      "Time:                        14:54:21   Log-Likelihood:                -40379.\n",
       "No. Observations:                4815   AIC:                         8.077e+04\n",
       "Df Residuals:                    4807   BIC:                         8.083e+04\n",
       "Df Model:                           7                                         \n",
@@ -386,8 +386,8 @@
       "Dep. Variable:            loan_amount   R-squared:                       0.815\n",
       "Model:                            OLS   Adj. R-squared:                  0.815\n",
       "Method:                 Least Squares   F-statistic:                     4241.\n",
-      "Date:                Thu, 13 Feb 2020   Prob (F-statistic):               0.00\n",
-      "Time:                        14:47:28   Log-Likelihood:                -40381.\n",
+      "Date:                Fri, 14 Feb 2020   Prob (F-statistic):               0.00\n",
+      "Time:                        14:54:23   Log-Likelihood:                -40381.\n",
       "No. Observations:                4815   AIC:                         8.077e+04\n",
       "Df Residuals:                    4809   BIC:                         8.081e+04\n",
       "Df Model:                           5                                         \n",
@@ -687,8 +687,8 @@
       "Dep. Variable:               earnings   R-squared:                       0.938\n",
       "Model:                            OLS   Adj. R-squared:                  0.935\n",
       "Method:                 Least Squares   F-statistic:                     353.0\n",
-      "Date:                Thu, 13 Feb 2020   Prob (F-statistic):           4.90e-29\n",
-      "Time:                        14:47:29   Log-Likelihood:                -284.91\n",
+      "Date:                Fri, 14 Feb 2020   Prob (F-statistic):           4.90e-29\n",
+      "Time:                        14:54:24   Log-Likelihood:                -284.91\n",
       "No. Observations:                  50   AIC:                             575.8\n",
       "Df Residuals:                      47   BIC:                             581.6\n",
       "Df Model:                           2                                         \n",
@@ -854,8 +854,8 @@
       "Dep. Variable:               earnings   R-squared:                       0.938\n",
       "Model:                            OLS   Adj. R-squared:                  0.935\n",
       "Method:                 Least Squares   F-statistic:                     353.0\n",
-      "Date:                Thu, 13 Feb 2020   Prob (F-statistic):           4.90e-29\n",
-      "Time:                        14:47:29   Log-Likelihood:                -284.91\n",
+      "Date:                Fri, 14 Feb 2020   Prob (F-statistic):           4.90e-29\n",
+      "Time:                        14:54:24   Log-Likelihood:                -284.91\n",
       "No. Observations:                  50   AIC:                             575.8\n",
       "Df Residuals:                      47   BIC:                             581.6\n",
       "Df Model:                           2                                         \n",
