--- a/3. Tabular data (regr)/3.5 Polynomial regression.ipynb
+++ b/3. Tabular data (regr)/3.5 Polynomial regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regresión polinomial\n",
+    "# Regresión polinómica\n",
     "\n",
     "La regresion lineal tanto univariante como multivariante asumen que existe una relación lineal entre las variables dependientes e independientes, pero es habitual encontrar que los datos reales que recopilamos presentan relaciones que no son lineales. En estos casos es posible realizar una regresión polinomial. Por ejemplo, podemos estudiar cómo se relacionan el número de millas que una persona camina cada día y la edad de dicha persona usando una ecuación cuadrática."
    ]
@@ -262,7 +262,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.743\n",
       "Method:                 Least Squares   F-statistic:                     57.38\n",
       "Date:                Fri, 14 Feb 2020   Prob (F-statistic):           4.57e-12\n",
-      "Time:                        14:55:41   Log-Likelihood:                -52.635\n",
+      "Time:                        15:01:55   Log-Likelihood:                -52.635\n",
       "No. Observations:                  40   AIC:                             111.3\n",
       "Df Residuals:                      37   BIC:                             116.3\n",
       "Df Model:                           2                                         \n",
@@ -382,7 +382,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.941\n",
       "Method:                 Least Squares   F-statistic:                     90.42\n",
       "Date:                Fri, 14 Feb 2020   Prob (F-statistic):           2.94e-19\n",
-      "Time:                        14:55:41   Log-Likelihood:                -20.183\n",
+      "Time:                        15:01:56   Log-Likelihood:                -20.183\n",
       "No. Observations:                  40   AIC:                             56.37\n",
       "Df Residuals:                      32   BIC:                             69.88\n",
       "Df Model:                           7                                         \n",
