Correcciones EDA regresión 2

--- a/3. Tabular data (regr)/3.1 EDA.ipynb
+++ b/3. Tabular data (regr)/3.1 EDA.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
     "!wget -P ./data/ \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/3. Tabular data (regr)/data/house_prices_train.csv\"\n",
-    "!wget -P ./data/ \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/3. Tabular data (regr)/data/house_prices_train.csv\"    "
+    "!wget -P ./data/ \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/3. Tabular data (regr)/data/house_prices_test.csv\"    "
    ]
   },
   {
