--- a/4. NLP/4.3 Word Embeddings.ipynb
+++ b/4. NLP/4.3 Word Embeddings.ipynb
@@ -287,7 +287,7 @@
     "df = pd.read_csv(\"data/movieReviews_trainLabel.tsv\", sep=\"\\t\", index_col=\"id\")\n",
     "\n",
     "# Only top 1000\n",
-    "df = df.sample(1000, )"
+    "df = df.sample(1000, random_state=0)"
    ]
   },
   {
@@ -305,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a7e0b7ecc65473e82fa6d1722b5040e",
+       "model_id": "db8cd6edf5ff4f84b27f313dacb79543",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 65.000%\n"
+      "Accuracy: 70.000%\n"
      ]
     }
    ],
@@ -388,13 +388,6 @@
     "model.fit(x_train, y_train)\n",
     "print(f\"Accuracy: {model.score(x_test, y_test) * 100:.3f}%\", )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
