--- a/4. NLP/4.2 Tf-Idf + 2grams.ipynb
+++ b/4. NLP/4.2 Tf-Idf + 2grams.ipynb
@@ -238,7 +238,359 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bag Of Words Features"
+    "# <center> Toy Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = [\n",
+    "    'Hola esto es una frase',\n",
+    "    'Hola esto es otra frase',\n",
+    "    'Hola hola hola, no vengas sola'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bag Of Words (BOW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>es</th>\n",
+       "      <th>esto</th>\n",
+       "      <th>frase</th>\n",
+       "      <th>hola</th>\n",
+       "      <th>no</th>\n",
+       "      <th>otra</th>\n",
+       "      <th>sola</th>\n",
+       "      <th>una</th>\n",
+       "      <th>vengas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Text 1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Text 2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Text 3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        es  esto  frase  hola  no  otra  sola  una  vengas\n",
+       "Text 1  1   1     1      1     0   0     0     1    0     \n",
+       "Text 2  1   1     1      1     0   1     0     0    0     \n",
+       "Text 3  0   0     0      3     1   0     1     0    1     "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow = CountVectorizer()\n",
+    "texts_bow = bow.fit_transform(texts)\n",
+    "tokens = bow.get_feature_names()\n",
+    "pd.DataFrame(data=texts_bow.toarray(), index=['Text 1', 'Text 2', \"Text 3\"], columns=tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>es otra</th>\n",
+       "      <th>es una</th>\n",
+       "      <th>esto es</th>\n",
+       "      <th>hola esto</th>\n",
+       "      <th>hola hola</th>\n",
+       "      <th>hola no</th>\n",
+       "      <th>no vengas</th>\n",
+       "      <th>otra frase</th>\n",
+       "      <th>una frase</th>\n",
+       "      <th>vengas sola</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Text 1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Text 2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Text 3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        es otra  es una  esto es  hola esto  hola hola  hola no  no vengas  \\\n",
+       "Text 1  0        1       1        1          0          0        0           \n",
+       "Text 2  1        0       1        1          0          0        0           \n",
+       "Text 3  0        0       0        0          2          1        1           \n",
+       "\n",
+       "        otra frase  una frase  vengas sola  \n",
+       "Text 1  0           1          0            \n",
+       "Text 2  1           0          0            \n",
+       "Text 3  0           0          1            "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow = CountVectorizer(ngram_range=(2, 2))\n",
+    "texts_bow = bow.fit_transform(texts)\n",
+    "tokens = bow.get_feature_names()\n",
+    "pd.DataFrame(data=texts_bow.toarray(), index=['Text 1', 'Text 2', \"Text 3\"], columns=tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TFIDF\n",
+    "A problem with the Bag of Words approach is that highly frequent words start to dominate in the document (e.g. larger score), but may not contain as much “informational content”. Also, it will give more weight to longer documents than shorter documents.\n",
+    "\n",
+    "One approach is to rescale the frequency of words by how often they appear in all documents so that the scores for frequent words like “the” that are also frequent across all documents are penalized. This approach to scoring is called Term Frequency-Inverse Document Frequency, or TF-IDF for short, where:\n",
+    "\n",
+    "- **Term Frequency**: is a scoring of the frequency of the word in the current document.\n",
+    "- **Inverse Document Frequency**: is a scoring of how rare the word is across documents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>es</th>\n",
+       "      <th>esto</th>\n",
+       "      <th>frase</th>\n",
+       "      <th>hola</th>\n",
+       "      <th>no</th>\n",
+       "      <th>otra</th>\n",
+       "      <th>sola</th>\n",
+       "      <th>una</th>\n",
+       "      <th>vengas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Text 1</th>\n",
+       "      <td>0.433067</td>\n",
+       "      <td>0.433067</td>\n",
+       "      <td>0.433067</td>\n",
+       "      <td>0.336315</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.569431</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Text 2</th>\n",
+       "      <td>0.433067</td>\n",
+       "      <td>0.433067</td>\n",
+       "      <td>0.433067</td>\n",
+       "      <td>0.336315</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.569431</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Text 3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.715092</td>\n",
+       "      <td>0.403585</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.403585</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.403585</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              es      esto     frase      hola        no      otra      sola  \\\n",
+       "Text 1  0.433067  0.433067  0.433067  0.336315  0.000000  0.000000  0.000000   \n",
+       "Text 2  0.433067  0.433067  0.433067  0.336315  0.000000  0.569431  0.000000   \n",
+       "Text 3  0.000000  0.000000  0.000000  0.715092  0.403585  0.000000  0.403585   \n",
+       "\n",
+       "             una    vengas  \n",
+       "Text 1  0.569431  0.000000  \n",
+       "Text 2  0.000000  0.000000  \n",
+       "Text 3  0.000000  0.403585  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf = TfidfVectorizer()\n",
+    "texts_tfidf = tfidf.fit_transform(texts)\n",
+    "tokens = tfidf.get_feature_names()\n",
+    "pd.DataFrame(data=texts_tfidf.toarray(), index=['Text 1', 'Text 2', \"Text 3\"], columns=tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Extract Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bag Of Words 1-gram"
    ]
   },
   {
@@ -249,6 +601,13 @@
    "source": [
     "bow_1gram = CountVectorizer()\n",
     "text_bow_1gram = bow_1gram.fit_transform(df['review'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bag Of Words 1-2-grams"
    ]
   },
   {
@@ -265,14 +624,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TFIDF Features\n",
-    "A problem with the Bag of Words approach is that highly frequent words start to dominate in the document (e.g. larger score), but may not contain as much “informational content”. Also, it will give more weight to longer documents than shorter documents.\n",
-    "\n",
-    "One approach is to rescale the frequency of words by how often they appear in all documents so that the scores for frequent words like “the” that are also frequent across all documents are penalized. This approach to scoring is called Term Frequency-Inverse Document Frequency, or TF-IDF for short, where:\n",
-    "\n",
-    "- **Term Frequency**: is a scoring of the frequency of the word in the current document.\n",
-    "- **Inverse Document Frequency**: is a scoring of how rare the word is across documents.\n",
-    "\n",
     "### TFIDF 1-gram"
    ]
   },
@@ -290,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TFIDF 2-grams"
+    "### TFIDF 1-2-grams"
    ]
   },
   {
@@ -337,7 +688,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model: Naive Bayes (<1 segundo)"
+    "# <center> ML Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes (<1 segundo)"
    ]
   },
   {
@@ -372,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model: Logistic Regression (3+30+2+8 segundos)"
+    "## Logistic Regression (3+30+2+8 segundos)"
    ]
   },
   {
@@ -407,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model: Random Forest (10+90+6+22 segundos)"
+    "## Random Forest (10+90+6+22 segundos)"
    ]
   },
   {
