--- a/4. NLP/4.3 Word Embeddings.ipynb
+++ b/4. NLP/4.3 Word Embeddings.ipynb
@@ -358,8 +358,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(embeddings, df.sentiment, test_size=0.1,\n",
-    "                                                    stratify=df.sentiment, random_state=0)"
+    "x_train, x_test, y_train, y_test = train_test_split(embeddings, df[\"sentiment\"],\n",
+    "                                                    test_size=0.2, shuffle=True, random_state=0)"
    ]
   },
   {
