--- a/4. NLP/4.4 RNN with fastai2.ipynb
+++ b/4. NLP/4.4 RNN with fastai2.ipynb
@@ -33,6 +33,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
+    "#!wget -P ./data \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/4. NLP/data/movieReviews_trainLabel.tsv\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
