--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ../utils.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   },
   "name": "seminar13_optional_practice_trees_titanic.ipynb"
  },
