--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -10,11 +10,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           _____           \n",
+      "                          |_   _|   /\\     \n",
+      "  _ __ ___  _   _ _ __ ___  | |    /  \\    \n",
+      " | '_ ` _ \\| | | | '__/ __| | |   / /\\ \\   \n",
+      " | | | | | | |_| | | | (__ _| |_ / ____ \\  \n",
+      " |_| |_| |_|\\__ _|_|  \\___|_____/_/    \\_\\ \n",
+      "                                           \n",
+      "🕑 Hora:   00:58\n",
+      "🗓️ Fecha:  20/02/2020\n",
+      "💻 S.O.:   Linux\n",
+      "🐍 Python: 3.8.1\n",
+      "🔥 CPU:    4 cores\n",
+      "🔥 GPU:    GeForce GTX 1080 Ti\n",
+      "\n",
+      "USING PACKAGES:\n",
+      "  Numpy:             1.18.1\n",
+      "  Pandas:            1.0.1\n",
+      "  Matplotlib:        3.1.2\n",
+      "  Seaborn:           0.9.0\n",
+      "  Altair:            4.0.1\n",
+      "  Sklearn:           0.22.1\n",
+      "  Category encoders: 2.1.0\n",
+      "  XGBoost:           0.90\n",
+      "  LightGBM:          2.3.1\n",
+      "  Pytorch:           1.4.0\n",
+      "  Fast.ai:           1.0.60\n"
+     ]
+    }
+   ],
    "source": [
-    "%run ../utils.py"
+    "%run ../murcIA.py"
    ]
   },
   {
