--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -10,6 +10,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ONLY IN COLAB !!!\n",
+    "\n",
+    "# DOWNLOAD MURC.IA\n",
+    "#!wget -P ./../ \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/murcIA.py\"\n",
+    "\n",
+    "# DOWNLOAD DATASET:\n",
+    "#!wget -P ./datum/ \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/2.%20Tabular%20data%20(clas)/data/titanic_train.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -51,35 +66,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "%matplotlib inline\n",
-    "sns.set()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Leer CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### DOWNLOAD DATASET. ONLY IN COLAB !!!\n",
-    "#!wget -P ./datum/ \"https://raw.githubusercontent.com/SaturdaysAI-Murcia/machine-learning/master/2.%20Tabular%20data%20(clas)/data/titanic_train.csv\""
    ]
   },
   {
