--- a/2. Tabular data (clas)/2.2 Decission tree.ipynb
+++ b/2. Tabular data (clas)/2.2 Decission tree.ipynb
@@ -28,6 +28,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'sklearn.preprocessing' from '/anaconda3/lib/python3.7/site-packages/sklearn/preprocessing/__init__.py'>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
