--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -39,7 +39,7 @@
       " | | | | | | |_| | | | (__ _| |_ / ____ \\  \n",
       " |_| |_| |_|\\__ _|_|  \\___|_____/_/    \\_\\ \n",
       "                                           \n",
-      "🕑 Hora:   11:51\n",
+      "🕑 Hora:   13:10\n",
       "🗓️ Fecha:  20/02/2020\n",
       "💻 S.O.:   Darwin\n",
       "🔥 CPU:    8 cores\n",
@@ -48,16 +48,19 @@
       "\n",
       "PAQUETES:\n",
       "\n",
-      "  Numpy (np):   1.18.0\n",
-      "  Pandas (pd):  1.0.1\n",
-      "  Seaborn (sb): 0.10.0\n",
-      "  Altair (alt): 4.0.0\n",
-      "  Matplotlib:   3.0.3\n",
-      "  Sklearn:      0.22.1\n",
-      "  XGBoost:      0.90\n",
-      "  LightGBM:     2.3.1\n",
-      "  Pytorch:      1.3.1\n",
-      "  Fast.ai:      1.0.60\n",
+      "  Numpy (np):            1.18.0\n",
+      "  Pandas (pd):           1.0.1\n",
+      "  Pandas Profiling (pp): 2.3.0\n",
+      "  Missingno (ms):        0.4.2\n",
+      "  Seaborn (sb):          0.10.0\n",
+      "  Altair (at):           4.0.0\n",
+      "  Matplotlib (plt):      3.0.3\n",
+      "  UMAP (umap):           0.3.10\n",
+      "  Sklearn (skl):         0.22.1\n",
+      "  XGBoost (xgb):         0.90\n",
+      "  LightGBM (lgb):        2.3.1\n",
+      "  Pytorch:               1.3.1\n",
+      "  Fast.ai:               1.0.60\n",
       "\n",
       "FUNCIONES DISPONIBLES:\n",
       "\n",
