reduce_mem_usage fix

--- a/2. Tabular data (clas)/2.1 EDA.ipynb
+++ b/2. Tabular data (clas)/2.1 EDA.ipynb
@@ -39,7 +39,7 @@
       " | | | | | | |_| | | | (__ _| |_ / ____ \\  \n",
       " |_| |_| |_|\\__ _|_|  \\___|_____/_/    \\_\\ \n",
       "                                           \n",
-      "🕑 Hora:   13:10\n",
+      "🕑 Hora:   13:34\n",
       "🗓️ Fecha:  20/02/2020\n",
       "💻 S.O.:   Darwin\n",
       "🔥 CPU:    8 cores\n",
@@ -254,6 +254,44 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory decreased from 0.08 MB to 0.05 MB (34.4%)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Survived     object\n",
+       "Pclass        uint8\n",
+       "Name         object\n",
+       "Sex          object\n",
+       "Age         float16\n",
+       "SibSp         uint8\n",
+       "Parch         uint8\n",
+       "Ticket       object\n",
+       "Fare        float16\n",
+       "Cabin        object\n",
+       "Embarked     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = reduce_mem_usage(df); df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -290,67 +328,74 @@
        "      <td>891.0</td>\n",
        "      <td>2.308642</td>\n",
        "      <td>0.836071</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>2.0000</td>\n",
-       "      <td>3.0000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.0000</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Age</th>\n",
        "      <td>714.0</td>\n",
-       "      <td>29.699118</td>\n",
-       "      <td>14.526497</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>20.1250</td>\n",
-       "      <td>28.0000</td>\n",
+       "      <td>29.687500</td>\n",
+       "      <td>14.523438</td>\n",
+       "      <td>0.419922</td>\n",
+       "      <td>20.125000</td>\n",
+       "      <td>28.000000</td>\n",
        "      <td>38.0</td>\n",
-       "      <td>80.0000</td>\n",
+       "      <td>80.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SibSp</th>\n",
        "      <td>891.0</td>\n",
        "      <td>0.523008</td>\n",
        "      <td>1.102743</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>8.0000</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Parch</th>\n",
        "      <td>891.0</td>\n",
        "      <td>0.381594</td>\n",
        "      <td>0.806057</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.0000</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fare</th>\n",
        "      <td>891.0</td>\n",
-       "      <td>32.204208</td>\n",
-       "      <td>49.693429</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>7.9104</td>\n",
-       "      <td>14.4542</td>\n",
+       "      <td>32.187500</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.910156</td>\n",
+       "      <td>14.453125</td>\n",
        "      <td>31.0</td>\n",
-       "      <td>512.3292</td>\n",
+       "      <td>512.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        count       mean        std   min      25%      50%   75%       max\n",
-       "Pclass  891.0   2.308642   0.836071  1.00   2.0000   3.0000   3.0    3.0000\n",
-       "Age     714.0  29.699118  14.526497  0.42  20.1250  28.0000  38.0   80.0000\n",
-       "SibSp   891.0   0.523008   1.102743  0.00   0.0000   0.0000   1.0    8.0000\n",
-       "Parch   891.0   0.381594   0.806057  0.00   0.0000   0.0000   0.0    6.0000\n",
-       "Fare    891.0  32.204208  49.693429  0.00   7.9104  14.4542  31.0  512.3292"
+       "        count       mean        std       min        25%        50%   75%  \\\n",
+       "Pclass  891.0   2.308642   0.836071  1.000000   2.000000   3.000000   3.0   \n",
+       "Age     714.0  29.687500  14.523438  0.419922  20.125000  28.000000  38.0   \n",
+       "SibSp   891.0   0.523008   1.102743  0.000000   0.000000   0.000000   1.0   \n",
+       "Parch   891.0   0.381594   0.806057  0.000000   0.000000   0.000000   0.0   \n",
+       "Fare    891.0  32.187500        inf  0.000000   7.910156  14.453125  31.0   \n",
+       "\n",
+       "          max  \n",
+       "Pclass    3.0  \n",
+       "Age      80.0  \n",
+       "SibSp     8.0  \n",
+       "Parch     6.0  \n",
+       "Fare    512.5  "
       ]
      },
      "execution_count": 4,
