--- a/6. Vision/Classification - Fastai v2.ipynb
+++ b/6. Vision/Classification - Fastai v2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Image Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
