--- a/6. Vision/Classification - Fastai v2.ipynb
+++ b/6. Vision/Classification - Fastai v2.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade fastai2"
+    "#!pip install --upgrade fastai2"
    ]
   },
   {
